Prevent item IDs and location IDs from wrapping
+ add a little padding in the table

--- a/src/app/xyz/xyz.component.scss
+++ b/src/app/xyz/xyz.component.scss
@@ -20,6 +20,10 @@
 
     th:not(.spacing), td {
       border: 1px solid black;
+      padding: .3em .2em;
     }
+  }
+  .nobr {
+    white-space: nowrap;
   }
 }
